# Sharaku

./: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.github/workflows/: ci.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_initial_tables.sql  003_allow_folder_work_type.sql
src-tauri/src/: db.rs  error.rs  importer.rs  lib.rs  main.rs  relocator.rs  scanner.rs  settings.rs  template.rs  thumbnail.rs  viewer.rs
src-tauri/src/tests/: db.rs  importer.rs  relocator.rs  scanner.rs  settings.rs  template.rs  viewer.rs
src/lib/: types.ts
src/lib/components/: BulkImportView.svelte  ImportView.svelte  ScanButton.svelte  ScanProgress.svelte  SettingsView.svelte  WorkCard.svelte  WorkGrid.svelte  WorkViewer.svelte
src/lib/db/: database.ts
