[package]
name = "sharaku"
version = "0.1.0"
description = "Image, manga and PDF viewer"
authors = ["you"]
edition = "2021"

[lib]
name = "sharaku_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
webp = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
natord = "1"
